syntax = "proto3";

package great;

message Greeting{
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest{
	Greeting greeting = 1;
}

message GreetingResponse{
	string result = 1;
}

message GreetManyRequest{
	Greeting greeting = 1;
}

message GreetManyResponse{
	string result = 1;
}

message LongGreetRequest{
	Greeting greeting = 1;
}

message LongGreetResponse{
	string result = 1;
}

message GreetEveryoneRequest{
	Greeting greeting = 1;
}

message GreetEveryoneResponse{
	string result = 1;
}

message GreetDeadLineRequest{
	string name = 1;
}

message GreetDeadLineResponse{
	string result = 1;
}

service GreetingService{
	//Unary
	rpc Greet (GreetingRequest) returns (GreetingResponse) {}

	//Server Streaming
	rpc GreatManyTimes (GreetManyRequest) returns (stream GreetManyResponse) {}

	//Client Streaming
	rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {}

	//Bi-directional Streaming
	rpc GreetEveryOne (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}

	rpc GreetWithDeadLine (GreetDeadLineRequest) returns (GreetDeadLineResponse) {}
}